# flash-cards

./: .coveragerc  .env.example  .flake8  .flaskenv  .gitignore  LICENSE  MANIFEST.in  Makefile  Pipfile  Procfile  README.md  README.txt  TESTING.md  development.ini  env.example  flashcards.py  production.ini  pyproject.toml  pytest.ini  requirements.txt  run.py  run.sh  setup.py  testing.ini
app/: __init__.py  models.py
app/blueprints/auth/: forms.py  routes.py
app/blueprints/errors/: handlers.py
app/blueprints/main/: forms.py  routes.py
app/forms/: auth.py  main.py
app/static/: styles.css
app/static/css/: styles.css
app/static/js/: slideshow.js
app/templates/: base.html
app/templates/auth/: login.html  register.html
app/templates/errors/: 404.html  500.html
app/templates/main/: _deck.html  card_edit.html  card_new.html  deck_edit.html  deck_manage.html  deck_new.html  deck_view.html  edit_user.html  explore.html  feed.html  landing.html  user.html
app/views/: auth.py  errors.py  main.py
config/: __init__.py
docs/: TESTING.md
flashcards/: settings.py
flashly/: __init__.py  routes.py
flashly-client/: index.html
flashly-client/src/helpers/: api.ts  context.ts  types.ts
flashly-client/testing/: api.ts  jsondb.ts
flashly/client/: package-lock.json  package.json
flashly/client/src/: index.css  main.tsx
flashly/models/: __init__.py  card.py  category.py  deck.py  deck_category.py  follower.py  user.py  user_details.py
flashly/templates/: layout.jinja2
flashly/utils/: serialize.py
flashly/views/: api.py  auth.py  card.py  deck.py  default.py  frontend.py  hello.py  hello_world.py  notfound.py  spa.py  status.py  user.py
frontend/: index.html
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/helpers/: api.ts
frontend/src/pages/: HomePage.tsx  LoginPage.tsx  RegisterPage.tsx
migrations/: 000_create_users.sql  001_create_user_details.sql  002_create_user_followers.sql  003_create_decks.sql  004_create_cards.sql  005_create_categories.sql  006_create_deck_categories.sql
migrations/scripts/: createdb.py  dropdb.py
migrations/versions/: 2b9829f6a2e0_followers_association_table.py  48aab2c97f22_added_card_relationship_to_user.py  6752ad378456_initial_commit.py
src/accounts/: admin.py  forms.py  models.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py  0002_auto_20200806_0301.py  0003_auto_20200806_0304.py  0004_auto_20200806_2041.py  0005_auto_20200806_2047.py
src/accounts/tests/: test_follow_view.py  test_mail.py  test_password_change_view.py  test_password_reset_confirm_view.py  test_password_reset_done_view.py  test_password_reset_mail.py  test_password_reset_view.py  test_profile_view.py  test_register_form.py  test_register_view.py  test_settings_view.py  test_unfollow_view.py  test_user_form.py  test_views.py
src/decks/: admin.py  forms.py  models.py  urls.py  views.py
src/decks/migrations/: 0001_initial.py  0002_auto_20200727_1549.py  0002_auto_20200728_2015.py  0003_auto_20200727_1559.py  0003_auto_20200728_2040.py  (+6 more)
src/flashcards/: settings.py  urls.py
src/static/: base.css
src/templates/: base.html
test/: test_User.py
tests/: conftest.py  full_test.py  test_functional.py  test_views.py
tests/models/: test_card.py  test_category.py  test_deck.py  test_deck_category.py  test_follower.py  test_user.py  test_user_details.py
tests/views/: api_test.py  hello_test.py  hello_world_test.py  test_auth.py  test_card.py  test_deck.py  test_status.py  test_user.py
web/: package.json
web/src/: main.tsx
web/testing/: api.ts  jsondb.ts  testDB.ts
(+172 files in other folders)
