[tool.poetry]
name = "flashly"
version = "0.0.0"
description = ""
authors = ["Nicholas Chumney <nicholas.chumney@outlook.com>"]
readme = "README.md"
packages = [{include = "flashly"}]

[tool.poetry.dependencies]
python = "^3.10"
waitress = "^3.0.2"
pyramid = "^2.0.2"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.1"
bcrypt = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^0.15.0"
black = "^24.0.0"
flake8 = "^7.0.0"
mypy = "^1.0.0"
webtest = "^3.0.6"

[tool.poetry.plugins."paste.app_factory"]
main = "flashly:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"